--- a/Review1_C/src/main/resources/application.properties
+++ b/Review1_C/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port = 8085
 sidis.app.jwtSecret= psoftSecretKey
 
 
-spring.datasource.url = jdbc:h2:file:../DataBase/review1
+spring.datasource.url = jdbc:h2:file:../DataBase/review1C
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
