--- a/Review1_Q/src/main/resources/application.properties
+++ b/Review1_Q/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port = 8084
 
 sidis.app.jwtSecret= psoftSecretKey
 
-spring.datasource.url = jdbc:h2:tcp://localhost:9092/file:../DataBase/review1
+spring.datasource.url = jdbc:h2:file:../DataBase/Review1Q
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
