--- a/Review2_Q/pom.xml
+++ b/Review2_Q/pom.xml
@@ -70,6 +70,11 @@
 			<artifactId>spring-security-config</artifactId>
 			<version>5.7.4</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+			<version>2.2.2.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<build>
