Remoção metodos Http

--- a/Review2_Q/src/main/resources/application.properties
+++ b/Review2_Q/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port = 8086
 
 sidis.app.jwtSecret= psoftSecretKey
-spring.datasource.url = jdbc:h2:file:../DataBase/review2
+spring.datasource.url = jdbc:h2:file:./DataBase/review2Q
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
