--- a/Review1_C/src/main/resources/application.properties
+++ b/Review1_C/src/main/resources/application.properties
@@ -18,3 +18,6 @@ spring.jpa.hibernate.ddl-auto=update
 security.basic.enabled=false
 
 server.error.include-message=always
+
+spring.rabbitmq.publisher-confirm-type=correlated
+spring.rabbitmq.publisher-returns=true
