--- a/Review1_C/src/main/resources/application.properties
+++ b/Review1_C/src/main/resources/application.properties
@@ -11,6 +11,13 @@ spring.datasource.password=password
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=brunoalves212002@gmail.com
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
