--- a/Review2_C/pom.xml
+++ b/Review2_C/pom.xml
@@ -81,6 +81,11 @@
 			<artifactId>spring-boot-starter-amqp</artifactId>
 			<version>2.2.2.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+			<version>2.5.6</version>
+		</dependency>
 	</dependencies>
 
 	<build>
